WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97579
Web Inspector: Fix logging in pure protocol test harness
https://bugs.webkit.org/show_bug.cgi?id=97579
Summary
Web Inspector: Fix logging in pure protocol test harness
Peter Rybin
Reported
2012-09-25 11:02:11 PDT
1. InspectorTest.log needs proper special symbol escaping. 2. A flushable logging means must be provided that survives crashes and timeout kill of DumpRenderTree.
Attachments
Patch for most of platforms
(8.75 KB, patch)
2012-09-25 11:27 PDT
,
Peter Rybin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Rybin
Comment 1
2012-09-25 11:27:28 PDT
Created
attachment 165646
[details]
Patch for most of platforms
Yury Semikhatsky
Comment 2
2012-09-25 22:48:31 PDT
Comment on
attachment 165646
[details]
Patch for most of platforms View in context:
https://bugs.webkit.org/attachment.cgi?id=165646&action=review
> LayoutTests/http/tests/inspector-protocol/resources/protocol-test.js:33 > + alert(text);
console.log() should also print a message to stdout in the tests but it would add messages to the inspector which might be undesirable in some protocol tests, so I guess alert should be fine here.
WebKit Review Bot
Comment 3
2012-09-25 22:57:52 PDT
Comment on
attachment 165646
[details]
Patch for most of platforms Clearing flags on attachment: 165646 Committed
r129595
: <
http://trac.webkit.org/changeset/129595
>
WebKit Review Bot
Comment 4
2012-09-25 22:57:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug