Web Inspector: Fix logging in pure protocol test harness https://bugs.webkit.org/show_bug.cgi?id=97579

Patch by Peter Rybin <peter.rybin@gmail.com> on 2012-09-25
Reviewed by Yury Semikhatsky.

Tools:

JavaScript alert implementation in DumpRenderTree gets immediate flush to make sure that
the message survives crash or kill by timeout.

* DumpRenderTree/blackberry/DumpRenderTree.cpp:
(BlackBerry::WebKit::DumpRenderTree::runJavaScriptAlert):
* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::runModalAlertDialog):
* DumpRenderTree/efl/DumpRenderTreeView.cpp:
(onJavaScriptAlert):
* DumpRenderTree/gtk/DumpRenderTree.cpp:
(webViewScriptAlert):
* DumpRenderTree/mac/UIDelegate.mm:
(-[UIDelegate webView:runJavaScriptAlertPanelWithMessage:initiatedByFrame:]):
* DumpRenderTree/qt/DumpRenderTreeQt.cpp:
(WebCore::WebPage::javaScriptAlert):
* DumpRenderTree/win/UIDelegate.cpp:
(UIDelegate::runJavaScriptAlertPanelWithMessage):

LayoutTests:

Logging facility is fixed and improved for inspector protocol harness.

* http/tests/inspector-protocol/resources/InspectorTest.js:
(InspectorTest.log): proper escaping is added
(InspectorTest.debugLog): new method is added for crash-proof debug messaging
* http/tests/inspector-protocol/resources/protocol-test.js:
(debugLog): new method is added for crash-proof debug messaging

Canonical link: https://commits.webkit.org/115611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129595 268f45cc-cd09-0410-ab3c-d52691b4dbfc