Tools/DumpRenderTree/gtk/DumpRenderTree.cpp
@@ -925,6 +925,7 @@ static gboolean webViewConsoleMessage(WebKitWebView* view, const gchar* message,
 static gboolean webViewScriptAlert(WebKitWebView* view, WebKitWebFrame* frame, const gchar* message, gpointer data)
 {
     fprintf(stdout, "ALERT: %s\n", message);
+    fflush(stdout);
     return TRUE;
 }
 
