Tools/DumpRenderTree/mac/UIDelegate.mm
@@ -89,8 +89,10 @@ DumpRenderTreeDraggingInfo *draggingInfo = nil;
 
 - (void)webView:(WebView *)sender runJavaScriptAlertPanelWithMessage:(NSString *)message initiatedByFrame:(WebFrame *)frame
 {
-    if (!done)
+    if (!done) {
         printf("ALERT: %s\n", [message UTF8String]);
+        fflush(stdout);
+    }
 }
 
 - (BOOL)webView:(WebView *)sender runJavaScriptConfirmPanelWithMessage:(NSString *)message initiatedByFrame:(WebFrame *)frame
