Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp
@@ -225,6 +225,7 @@ void WebPage::javaScriptAlert(QWebFrame*, const QString& message)
         return;
 
     fprintf(stdout, "ALERT: %s\n", message.toUtf8().constData());
+    fflush(stdout);
 }
 
 void WebPage::requestPermission(QWebFrame* frame, QWebPage::Feature feature)
